Starting to impl the html files and some minor changes